--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "contact-form",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+	"name": "contact-form",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"cy:open": "cypress open"
+	},
+	"devDependencies": {
+		"@types/jest": "^29.5.12",
+		"cypress": "^13.10.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0"
+	}
 }
