--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"cy:open": "cypress open"
+		"cy:open": "cypress open",
+		"cy:run": "cypress run"
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
