--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
+		"axe-core": "^4.9.1",
 		"cypress": "^13.10.0",
+		"cypress-axe": "^1.5.0",
+		"cypress-real-events": "^1.12.0",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0"
 	}
